Rollback dependency upgrades and JVM tunings